--- a/provision/inventory.ini
+++ b/provision/inventory.ini
@@ -1,2 +1,2 @@
 [app_server]
-app ansible_ssh_host=172.31.31.158 ansible_ssh_user=centos ansible_ssh_private_key_file=/home/centos/node1.pem 
+app ansible_ssh_host=172.31.31.158 ansible_ssh_user=centos ansible_ssh_private_key_file=/home/centos/node1.pem ansible_ssh_pass=rohith
