--- a/provision/inventory.ini
+++ b/provision/inventory.ini
@@ -1,4 +1,4 @@
 #[app_server]
 #app ansible_ssh_host=172.31.15.182 ansible_ssh_user=centos ansible_ssh_private_key_file=/home/centos/node1.pem ansible_ssh_pass=rohith
 [app_server]
-10.0.1.21 ansible_ssh_user=centos ansible_ssh_private_key_file=/root/aws-private.pem ansible_ssh_pass=rohith
+10.0.1.21 ansible_ssh_user=deploy ansible_ssh_private_key_file=/root/aws-private.pem ansible_ssh_pass=rohith
